# project2

./: .requirements.txt.swp  README.md  pyproject.toml
.github/workflows/: action.yml  test.yml
data/: dummy_network.adjlist
search/: graph.py
test/: test_bfs.py
