[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "search"
authors = [{name = "Jonathan Zhang", email = "jon.zhang@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
#networkx
]

[project.urls]
Home = "https://github.com/jzhang1198/project2"
